Optimize elven trade recipe matching
- added elven trade ingredient items to `BotaniaRecipeIngredientsCache` (making API method `ElvenTradeRecipe::containsItem` obsolete, so it was removed)
- added new API method `ElvenTradeRecipe::tryAssemble(ProcessingRecipeProvider, HolderLookup.Provider)`, which is based on vanilla shapeless matching logic and takes over the responsibilities of both `ElvenTradeRecipe::match(List<ItemStack>)` and `ElvenTradeRecipe::getOutputs(List<ItemStack>)`, which were removed
- elven trade recipes technically also support the vanilla methods `Recipe::matches` and `Recipe::assemble`, but those two methods are deprecated in favor of the new `tryAssemble` method
- standard elven trade recipes no longer allow special ingredient types that don't resolve to a fixed list of items (due to a Fabric API limitation)
- inlined `BotaniaRecipeTypes::getRecipes`, since it outlived its purpose (affects Alfheim Portal, Mana Pool, Pure Daisy, and JEI exclusion for elven trade return recipes)